tests/machine/x/c/right_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/right_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/right_join.c:62:3: error: unknown type name ‘list_int’
   62 |   list_int _t3 = list_int_create(orders.len * customers.len);
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/right_join.c:62:18: warning: implicit declaration of function ‘list_int_create’ [-Wimplicit-function-declaration]
   62 |   list_int _t3 = list_int_create(orders.len * customers.len);
      |                  ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/right_join.c:73:10: error: request for member ‘data’ in something not a structure or union
   73 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |          ^
/workspace/mochi/tests/machine/x/c/right_join.c:78:10: error: request for member ‘data’ in something not a structure or union
   78 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |          ^
/workspace/mochi/tests/machine/x/c/right_join.c:82:6: error: request for member ‘len’ in something not a structure or union
   82 |   _t3.len = _t4;
      |      ^
/workspace/mochi/tests/machine/x/c/right_join.c:83:28: error: invalid initializer
   83 |   list_resultItem result = _t3;
      |                            ^~~
/workspace/mochi/tests/machine/x/c/right_join.c:87:9: error: used struct type value where scalar is required
   87 |     if (entry.order) {
      |         ^~~~~

   1: #include <stdio.h>
